type update